feat(i18n, commands): update translations and command implementations
- update README files for English and Chinese
- update locale configuration in app.yml
- modify privileges and symbollink command implementations in src/commands

--- a/locales/app.yml
+++ b/locales/app.yml
@@ -263,56 +263,53 @@ commands:
     fr: "Aucun fichier de sauvegarde valide trouvé pour le conteneur %{container_name}"
     de: "Kein gültiges Backup-Datei für den Container %{container_name} gefunden"
     it: "Nessun file di backup valido trovato per il contenitore %{container_name}"
-  
-
-    
 
 lifecycle:
   can_not_connect_to_crates_io:
-    en: "Cannot connect to crates.io"
-    zh-CN: "无法连接到 crates.io"
-    ja: "crates.io に接続できません"
-    ko: "crates.io 에 연결할 수 없습니다"
-    es: "No se puede conectar a crates.io"
-    fr: "Impossible de se connecter à crates.io"
-    de: "Es konnte keine Verbindung zu crates.io hergestellt werden"
-    it: "Impossibile connettersi a crates.io"
+    en: "❌ Cannot connect to crates.io"
+    zh-CN: "❌ 无法连接到 crates.io"
+    ja: "❌ crates.io に接続できません"
+    ko: "❌ crates.io 에 연결할 수 없습니다"
+    es: "❌ No se puede conectar a crates.io"
+    fr: "❌ Impossible de se connecter à crates.io"
+    de: "❌ Es konnte keine Verbindung zu crates.io hergestellt werden"
+    it: "❌ Impossibile connettersi a crates.io"
   can_not_parse_version_info:
-    en: "Cannot parse version info"
-    zh-CN: "无法解析版本信息"
-    ja: "バージョン情報を解析できません"
-    ko: "버전 정보를 구문 분석할 수 없습니다"
-    es: "No se puede analizar la información de la versión"
-    fr: "Impossible d'analyser les informations de version"
-    de: "Die Versionsinformationen konnten nicht analysiert werden"
-    it: "Impossibile analizzare le informazioni della versione"
+    en: "❌ Cannot parse version info"
+    zh-CN: "❌ 无法解析版本信息"
+    ja: "❌ バージョン情報を解析できません"
+    ko: "❌ 버전 정보를 구문 분석할 수 없습니다"
+    es: "❌ No se puede analizar la información de la versión"
+    fr: "❌ Impossible d'analyser les informations de version"
+    de: "❌ Die Versionsinformationen konnten nicht analysiert werden"
+    it: "❌ Impossibile analizzare le informazioni della versione"
   no_available_version:
-    en: "No available version"
-    zh-CN: "没有可用版本"
-    ja: "利用可能なバージョンがありません"
-    ko: "사용 가능한 버전이 없습니다"
-    es: "No hay versiones disponibles"
-    fr: "Aucune version disponible"
-    de: "Keine verfügbare Version"
-    it: "Nessuna versione disponibile"
+    en: "❌ No available version"
+    zh-CN: "❌ 没有可用版本"
+    ja: "❌ 利用可能なバージョンがありません"
+    ko: "❌ 사용 가능한 버전이 없습니다"
+    es: "❌ No hay versiones disponibles"
+    fr: "❌ Aucune version disponible"
+    de: "❌ Keine verfügbare Version"
+    it: "❌ Nessuna versione disponibile"
   new_version_found:
-    en: "New version found %{latest_version}"
-    zh-CN: "发现新版本 %{latest_version}"
-    ja: "新しいバージョンが見つかりました %{latest_version}"
-    ko: "새로운 버전을 찾았습니다 %{latest_version}"
-    es: "Se ha encontrado una nueva versión %{latest_version}"
-    fr: "Une nouvelle version a été trouvée %{latest_version}"
-    de: "Eine neue Version wurde gefunden %{latest_version}"
-    it: "Una nuova versione è stata trovata %{latest_version}"
+    en: "🔄 New version found %{latest_version}"
+    zh-CN: "🔄 发现新版本 %{latest_version}"
+    ja: "🔄 新しいバージョンが見つかりました %{latest_version}"
+    ko: "🔄 새로운 버전을 찾았습니다 %{latest_version}"
+    es: "🔄 Se ha encontrado una nueva versión %{latest_version}"
+    fr: "🔄 Une nouvelle version a été trouvée %{latest_version}"
+    de: "🔄 Eine neue Version wurde gefunden %{latest_version}"
+    it: "🔄 Una nuova versione è stata trovata %{latest_version}"
   update_method:
-    en: "Update method"
-    zh-CN: "更新方法"
-    ja: "更新方法"
-    ko: "업데이트 방법"
-    es: "Método de actualización"
-    fr: "Méthode de mise à jour"
-    de: "Aktualisierungsmethode"
-    it: "Metodo di aggiornamento"
+    en: "🔄 Update method"
+    zh-CN: "🔄 更新方法"
+    ja: "🔄 更新方法"
+    ko: "🔄 업데이트 방법"
+    es: "🔄 Método de actualización"
+    fr: "🔄 Méthode de mise à jour"
+    de: "🔄 Aktualisierungsmethode"
+    it: "🔄 Metodo di aggiornamento"
   current_version:
     en: "Current version %{current_version}"
     zh-CN: "当前版本 %{current_version}"
@@ -323,23 +320,23 @@ lifecycle:
     de: "Aktuelle Version %{current_version}"
     it: "Versione corrente %{current_version}"
   update_command:
-    en: "Run the following command to update"
-    zh-CN: "运行以下命令更新"
-    ja: "次のコマンドを実行して更新します"
-    ko: "다음 명령을 실행하여 업데이트합니다"
-    es: "Ejecuta el siguiente comando para actualizar"
-    fr: "Exécutez la commande suivante pour mettre à jour"
-    de: "Führen Sie den folgenden Befehl aus, um zu aktualisieren"
-    it: "Esegui il seguente comando per aggiornare"
+    en: "🔄 Run the following command to update"
+    zh-CN: "🔄 运行以下命令更新"
+    ja: "🔄 次のコマンドを実行して更新します"
+    ko: "🔄 다음 명령을 실행하여 업데이트합니다"
+    es: "🔄 Ejecuta el siguiente comando para actualizar"
+    fr: "🔄 Exécutez la commande suivante pour mettre à jour"
+    de: "🔄 Führen Sie den folgenden Befehl aus, um zu aktualisieren"
+    it: "🔄 Esegui il seguente comando per aggiornare"
   check_update:
-    en: "Checking for updates"
-    zh-CN: "检查更新"
-    ja: "更新を確認中"
-    ko: "업데이트 확인 중"
-    es: "Comprobando actualizaciones"
-    fr: "Vérification des mises à jour"
-    de: "Aktualisierungen prüfen"
-    it: "Controllo delle aggiornamenti"
+    en: "🔄 Checking for updates"
+    zh-CN: "🔄 检查更新"
+    ja: "🔄 更新を確認中"
+    ko: "🔄 업데이트 확인 중"
+    es: "🔄 Comprobando actualizaciones"
+    fr: "🔄 Vérification des mises à jour"
+    de: "🔄 Aktualisierungen prüfen"
+    it: "🔄 Controllo delle aggiornamenti"
   uninstall:
     en: "Uninstalling rdbkp2"
     zh-CN: "卸载 rdbkp2"
@@ -368,23 +365,23 @@ lifecycle:
     de: "Symbolischer Link entfernen"
     it: "Rimuovere il collegamento simbolico"
   remove_symbollink_failed:
-    en: "Failed to remove symbolic link: %{error}"
-    zh-CN: "删除符号链接失败：%{error}"
-    ja: "シンボリックリンクの削除に失敗しました：%{error}"
-    ko: "심볼릭 링크 제거에 실패했습니다：%{error}"
-    es: "Error al eliminar el enlace simbólico: %{error}"
-    fr: "Erreur lors de la suppression du lien symbolique: %{error}"
-    de: "Symbolischer Link konnte nicht entfernt werden: %{error}"
-    it: "Il collegamento simbolico non può essere rimosso: %{error}"
+    en: "❌ Failed to remove symbolic link: %{error}"
+    zh-CN: "❌ 删除符号链接失败：%{error}"
+    ja: "❌ シンボリックリンクの削除に失敗しました：%{error}"
+    ko: "❌ 심볼릭 링크 제거에 실패했습니다：%{error}"
+    es: "❌ Error al eliminar el enlace simbólico: %{error}"
+    fr: "❌ Erreur lors de la suppression du lien symbolique: %{error}"
+    de: "❌ Symbolischer Link konnte nicht entfernt werden: %{error}"
+    it: "❌ Il collegamento simbolico non può essere rimosso: %{error}"
   uninstall_command:
-    en: "Run the following command to uninstall"
-    zh-CN: "运行以下命令卸载"
-    ja: "次のコマンドを実行してアンインストールします"
-    ko: "다음 명령을 실행하여 언인스톨합니다"
-    es: "Ejecuta el siguiente comando para desinstalar"
-    fr: "Exécutez la commande suivante pour désinstaller"
-    de: "Führen Sie den folgenden Befehl aus, um zu deinstallieren"
-    it: "Esegui il seguente comando per disinstallare"
+    en: "🎗️ Run the following command to uninstall"
+    zh-CN: "🎗️ 运行以下命令卸载"
+    ja: "🎗️ 次のコマンドを実行してアンインストールします"
+    ko: "🎗️ 다음 명령을 실행하여 언인스톨합니다"
+    es: "🎗️ Ejecuta el siguiente comando para desinstalar"
+    fr: "🎗️ Exécutez la commande suivante pour désinstaller"
+    de: "🎗️ Führen Sie den folgenden Befehl aus, um zu deinstallieren"
+    it: "🎗️ Esegui il seguente comando per disinstallare"
 
 privileges:
   has_admin_privileges:
@@ -534,7 +531,152 @@ prompt:
     de: "📼 Wählen Sie einen Volumen oder mehrere"
     it: "📼 Seleziona un volume o più"
 
-    
+symbollink:
+  create:
+    en: "Create"
+    zh-CN: "创建"
+    ja: "作成"
+    ko: "만들기"
+    es: "Crear"
+    fr: "Créer"
+    de: "Erstellen"
+    it: "Creare"
+  remove:
+    en: "Remove"
+    zh-CN: "删除"
+    ja: "削除"
+    ko: "제거"
+    es: "Eliminar"
+    fr: "Supprimer"
+    de: "Entfernen"
+    it: "Rimuovere"
+  user_input_error:
+    en: "⌨️ User input error"
+    zh-CN: "⌨️ 用户输入错误"
+    ja: "⌨️ ユーザー入力エラー"
+    ko: "⌨️ 사용자 입력 오류"
+    es: "⌨️ Error de entrada del usuario"
+    fr: "⌨️ Erreur de saisie de l'utilisateur"
+    de: "⌨️ Benutzereingabefehler"
+    it: "⌨️ Errore di input dell'utente"
+  action_cancelled:
+    en: "⛔ Action cancelled"
+    zh-CN: "⛔ 操作已取消"
+    ja: "⛔ 操作がキャンセルされました"
+    ko: "⛔ 작업이 취소되었습니다"
+    es: "⛔ La acción se ha cancelado"
+    fr: "⛔ L'action a été annulée"
+    de: "⛔ Die Aktion wurde abgebrochen"
+    it: "⛔ L'azione è stata annullata"
+  create_symbollink_prompt:
+    en: "🔗 Create symbolic link"
+    zh-CN: "🔗 创建符号链接"
+    ja: "🔗 シンボリックリンクを作成します"
+    ko: "🔗 심볼릭 링크를 만듭니다"
+    es: "🔗 Crear enlace simbólico"
+    fr: "🔗 Créer un lien symbolique"
+    de: "🔗 Symbolischer Link erstellen"
+    it: "🔗 Creare il collegamento simbolico"
+  remove_symbollink_prompt:
+    en: "🔗 Remove symbolic link"
+    zh-CN: "🔗 删除符号链接"
+    ja: "🔗 シンボリックリンクを削除します"
+    ko: "🔗 심볼릭 링크를 제거합니다"
+    es: "🔗 Eliminar enlace simbólico"
+    fr: "🔗 Supprimer le lien symbolique"
+    de: "🔗 Symbolischer Link entfernen"
+    it: "🔗 Rimuovere il collegamento simbolico"
+  already_exists:
+    en: "🔗 Already exists"
+    zh-CN: "🔗 已存在"
+    ja: "🔗 すでに存在します"
+    ko: "🔗 이미 존재합니다"
+    es: "🔗 Ya existe"
+    fr: "🔗 Existe déjà"
+    de: "🔗 Existe bereits"
+    it: "🔗 Esiste già"
+  not_symlink:
+    en: "🔗 Not a symbolic link"
+    zh-CN: "🔗 不是符号链接"
+    ja: "🔗 シンボリックリンクではありません"
+    ko: "🔗 심볼릭 링크가 아닙니다"
+    es: "🔗 No es un enlace simbólico"
+    fr: "🔗 N'est pas un lien symbolique"
+    de: "🔗 Ist kein symbolischer Link"
+    it: "🔗 Non è un collegamento simbolico"
+  confirm_action:
+    en: "🤔 Confirm action"
+    zh-CN: "🤔 确认操作"
+    ja: "🤔 操作を確認します"
+    ko: "🤔 작업을 확인합니다"
+    es: "🤔 Confirmar acción"
+    fr: "🤔 Confirmer l'action"
+    de: "🤔 Aktion bestätigen"
+    it: "🤔 Confermare l'azione"
+  path_status_check:
+    en: "🔗 Path status check"
+    zh-CN: "🔗 路径状态检查"
+    ja: "🔗 パスの状態を確認します"
+    ko: "🔗 경로 상태 확인"
+    es: "🔗 Comprobar el estado del camino"
+    fr: "🔗 Vérifier l'état du chemin"
+    de: "🔗 Pfadstatus überprüfen"
+    it: "🔗 Controllare lo stato del percorso"
+  failed_to_create_directory:
+    en: "❌ Failed to create directory: %{directory}"
+    zh-CN: "❌ 创建目录失败：%{directory}"
+    ja: "❌ ディレクトリの作成に失敗しました：%{directory}"
+    ko: "❌ 디렉토리 생성에 실패했습니다：%{directory}"
+    es: "❌ Error al crear el directorio: %{directory}"
+    fr: "❌ Erreur lors de la création du répertoire: %{directory}"
+    de: "❌ Fehler beim Erstellen des Verzeichnisses: %{directory}"
+    it: "❌ Errore durante la creazione del direttorio: %{directory}"
+  failed_to_create_symbollink:
+    en: "❌ Failed to create symbolic link: %{path}"
+    zh-CN: "❌ 创建符号链接失败：%{path}"
+    ja: "❌ シンボリックリンクの作成に失敗しました：%{path}"
+    ko: "❌ 심볼릭 링크를 만드는 데 실패했습니다：%{path}"
+    es: "❌ Error al crear el enlace simbólico: %{path}"
+    fr: "❌ Erreur lors de la création du lien symbolique: %{path}"
+    de: "❌ Fehler beim Erstellen des symbolischen Links: %{path}"
+    it: "❌ Errore durante la creazione del collegamento simbolico: %{path}"
+  success_create_symbollink:
+    en: "✅ Successfully created symbolic link: %{path}"
+    zh-CN: "✅ 成功创建符号链接：%{path}"
+    ja: "✅ シンボリックリンクが正常に作成されました：%{path}"
+    ko: "✅ 심볼릭 링크가 성공적으로 만들어졌습니다：%{path}"
+    es: "✅ Enlace simbólico creado correctamente: %{path}"
+    fr: "✅ Lien symbolique créé avec succès: %{path}"
+    de: "✅ Symbolischer Link erfolgreich erstellt: %{path}"
+    it: "✅ Collegamento simbolico creato con successo: %{path}"
+  symbollink_not_exists:
+    en: "❌ Symbol link not exists: %{path}"
+    zh-CN: "❌ 符号链接不存在：%{path}"
+    ja: "❌ シンボリックリンクが存在しません：%{path}"
+    ko: "❌ 심볼릭 링크가 존재하지 않습니다：%{path}"
+    es: "❌ El enlace simbólico no existe: %{path}"
+    fr: "❌ Le lien symbolique n'existe pas: %{path}"
+    de: "❌ Symbolischer Link existiert nicht: %{path}"
+    it: "❌ Il collegamento simbolico non esiste: %{path}"
+  failed_to_remove_symbollink:
+    en: "❌ Failed to remove symbolic link: %{path}"
+    zh-CN: "❌ 删除符号链接失败：%{path}"
+    ja: "❌ シンボリックリンクの削除に失敗しました：%{path}"
+    ko: "❌ 심볼릭 링크를 제거하는 데 실패했습니다：%{path}"
+    es: "❌ Error al eliminar el enlace simbólico: %{path}"
+    fr: "❌ Erreur lors de la suppression du lien symbolique: %{path}"
+    de: "❌ Fehler beim Entfernen des symbolischen Links: %{path}"
+    it: "❌ Errore durante la rimozione del collegamento simbolico: %{path}"
+  success_remove_symbollink:
+    en: "✅ Successfully removed symbolic link: %{path}"
+    zh-CN: "✅ 成功删除符号链接：%{path}"
+    ja: "✅ シンボリックリンクが正常に削除されました：%{path}"
+    ko: "✅ 심볼릭 링크가 성공적으로 제거되었습니다：%{path}"
+    es: "✅ Enlace simbólico eliminado correctamente: %{path}"
+    fr: "✅ Lien symbolique supprimé avec succès: %{path}"
+    de: "✅ Symbolischer Link erfolgreich entfernt: %{path}"
+    it: "✅ Collegamento simbolico rimosso con successo: %{path}"
+
 config:
   initialize_failed:
     en: "Failed to initialize config"
