feat: Implement restore functionality with admin privileges check
- Added a new `restore` command to handle restoring container volumes from backups.
- Introduced a prompt for requiring admin privileges before proceeding with restore operations.
- Implemented logic to handle restoring to a specified directory or in-place based on user input.
- Enhanced error handling for container mismatch during restore.
- Updated Docker client interface to support starting, stopping, and restarting containers with options.
- Added tests to ensure the restore functionality works as expected.

--- a/locales/app.yml
+++ b/locales/app.yml
@@ -47,6 +47,15 @@ commands:
     fr: "Statut"
     de: "Status"
     it: "Stato"
+  no_containers_available:
+    en: "No containers found"
+    zh-CN: "未找到任何容器"
+    ja: "コンテナが見つかりません"
+    ko: "컨테이너를 찾을 수 없습니다"
+    es: "No se encontraron contenedores"
+    fr: "Aucun conteneur trouvé"
+    de: "Keine Container gefunden"
+    it: "Nessun container trovato"
   container_status_running:
     en: "Running"
     zh-CN: "运行中"
